--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,56 @@
-body{
-  font-family: Verdana, sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-}
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One';
 
 body {
-  background-color: #fff5cc;
+    margin: 0;
 }
 
-img {
-  border: 1px solid black;
-  padding:5px;
-  margin-left:1em;
-  float:right;
+ul.menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 10%;
+  height: 100%; /* Full height */
+  position: fixed; /* Make it stick, even on scroll */
+  overflow: auto; /* Enable scrolling if the sidenav has too much content */
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
-p {
-  line-height: 1.2;
-  margin-top: 0em;
-  margin-bottom: 2em;
+ul.menu li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
 }
 
-/* The following are for the resume page. These should be moved to a separate
-file. */
-
-skill {
-  font-style: italic;
-  color: green;
+ul.menu li a.active {
+    background-color: black;
+    color: white;
 }
 
-employer {
-  font-size: large;
-  font-style: bold;
+ul.menu li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+    font-size: 150%;
+
 }
 
-date {
-  font-style: italic;
-  font-weight: 600;
+.main {
+  font-family: 'Poiret One', cursive;
+  margin-left:10%;
+  padding:1px 16px;
+}
+
+td h1 {
+  font-size: 200%;
+  text-align: right;
+}
+
+td h2 {
+  font-size: 150%;
+  text-align: right;
+}
+
+td h3 {
+  font-size: 100%;
+  text-align: right;
 }
