--- a/css/styles.css
+++ b/css/styles.css
@@ -15,19 +15,19 @@ ul.menu {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
-ul.menu li a {
+ul.menu li {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
 
-ul.menu li a.active {
+ul.menu li.active {
     background-color: black;
     color: white;
 }
 
-ul.menu li a:hover:not(.active) {
+ul.menu li:hover:not(.active) {
     background-color: #555;
     color: white;
     font-size: 150%;
