--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 20px;
 }
 
-#portrait {
+.portrait {
   padding-left: 5%;
   padding-bottom: 5%;
 }
@@ -60,59 +60,6 @@ td h3 {
   text-align: right;
 }
 
-.employer {
-  font-size: 125%;
-  font-weight: bolder;
-}
-
-.date_range {
-  font-style: italic;
-  font-weight: bold;
-  padding-left: 5%;
-}
-
-.jobtitle {
-  font-weight: bold;
-  padding-left: 5%;
-}
-
-.duties {
-  font-size: 90%;
-  padding-left: 10%;
-  text-indent: -5%;
-}
-
-.techs {
-  font-size: 90%;
-  padding-left: 10%;
-  text-indent: -5%;
-}
-
-.school {
-  font-size: 125%;
-  font-weight: bolder;
-}
-
-.course {
-  font-style: italic;
-  font-weight: bold;
-  padding-left: 5%;
-}
-
-.date_range {
-  font-size: 90%;
-  padding-left: 10%;
-}
-
-.location {
-  font-size: 90%;
-  padding-left: 10%;
-}
-
-.alphalist {
-  list-style-type: lower-alpha;
-}
-
-.portfoliotable table, th, td {
-
+.header, .footer {
+  width: 100%
 }
